@@ -56,6 +56,7 @@ Version 1.5.1
 - BUG: in the CfM dialog, both context menu entries "compare with BASE"
        and "compare with working copy" did the same. (Stefan)
 - BUG: GDI handle leak in the Vista context menu. (Stefan)
+- BUG: Revision graph: Handle nested branches properly. (Stefan Fuhrmann)
 
 Version 1.5.0
 - CHG: Support for IPv6 disabled due to problems with merging and terrible
